force-app/src/objects/c2g__DataViewTransposeItem__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__DataViewField__c</fullName>
        <label>DataView Field</label>
        <referenceTo>c2g__DataViewField__c</referenceTo>
        <relationshipLabel>DataView Transpose Items</relationshipLabel>
        <relationshipName>DataViewTransposeItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__DataViewJoin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataView Join</label>
        <referenceTo>c2g__DataViewJoin__c</referenceTo>
        <relationshipLabel>DataView Transpose Items</relationshipLabel>
        <relationshipName>DataViewTransposeItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ObjectField__c</fullName>
        <label>Object Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Value__c</fullName>
        <label>Value</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>zDeprecated:Dataview Transpose Item</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Transpose Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dataview Transpose Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>